# kafka_visualize_stream_app

./: README.md  app.py  consumer.py  docker-compose.yml  producer.py  pyproject.toml  test_kafka.py
